fix responsive grid layout bug

--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -5,7 +5,7 @@
 .gallery {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    grid-template-rows: repeat(6, 240px);
+    grid-auto-rows: 240px;
     grid-gap: 1rem;
     grid-auto-flow: dense;
 }
@@ -16,14 +16,18 @@
     background-position: center;
 }
 
-.gallery > .gallery-item:nth-child(4n) {
-    grid-column: span 2;
-    grid-row: span 2;
+@media only screen and (min-width: 800px) {
+    .gallery > .gallery-item:nth-child(4n) {
+        grid-column: span 2;
+        grid-row: span 2;
+    }
 }
 
-.gallery > .gallery-item:nth-child(8n) {
-    grid-column: span 3;
-    grid-row: span 3;
+@media only screen and (min-width: 1024px) {
+    .gallery > .gallery-item:nth-child(8n) {
+        grid-column: span 3;
+        grid-row: span 3;
+    }
 }
 
 .gallery > .gallery-item > div {
